data/derived/fa15/progs/unify/prog2249.ml.out
Characters 119-120:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> ('b -> 'a) list -> 'b -> 'a
       but an expression was expected of type 'a -> ('b -> 'a) list -> 'a
       The type variable 'a occurs inside 'b -> 'a
